--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
+    "react-scroll": "^1.9.0",
     "tailwindcss": "^3.4.3"
   }
 }
