--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
     "@astrojs/react": "^3.5.0",
     "@astrojs/renderer-react": "^0.5.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.4.0",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.10.0",
+    "astro-particles": "^2.10.0",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-github-calendar": "^4.1.5",
     "react-router-dom": "^6.23.1",
     "react-scroll": "^1.9.0",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "tsparticles": "^3.4.0"
   }
 }
