--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/react": "^3.5.0",
     "@astrojs/renderer-react": "^0.5.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@splinetool/react-spline": "^3.1.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.4.0",
     "@types/react": "^18.3.1",
