--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^5.4.0",
     "@astrojs/react": "^3.5.0",
     "@astrojs/renderer-react": "^0.5.0",
     "@astrojs/tailwind": "^5.1.0",
