--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "@types/react-dom": "^18.3.0",
     "astro": "^4.15.4",
     "astro-particles": "^2.10.0",
+    "autoprefixer": "^10.4.20",
     "node-fetch": "^3.3.2",
+    "postcss": "^8.4.45",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-github-calendar": "^4.1.5",
     "react-router-dom": "^6.23.1",
     "react-scroll": "^1.9.0",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.11",
     "tsparticles": "^3.4.0"
   }
 }
