--- a/src/components/blog/projects.json
+++ b/src/components/blog/projects.json
@@ -8,7 +8,7 @@
       { "name": "React", "class": "bg-blue-700 text-white", "icon": "React" },
       {
         "name": "Bootstrap",
-        "class": "bg-purple-300 text-white",
+        "class": "bg-purple-300 ",
         "icon": "Bootstrap"
       },
       { "name": "MySQL", "class": "bg-yellow-300 text-white", "icon": "MySQL" }
@@ -26,7 +26,7 @@
         "class": "bg-green-500 text-white",
         "icon": "Python"
       },
-      { "name": "Html", "class": "bg-blue-700 text-white", "icon": "Html" }
+      { "name": "Html", "class": "bg-green-500 text-white", "icon": "Html" }
     ]
   }
 ]
