--- a/package.json
+++ b/package.json
@@ -22,14 +22,22 @@
     "astro": "^4.15.4",
     "astro-particles": "^2.10.0",
     "autoprefixer": "^10.4.20",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.5.5",
+    "lucide-react": "^0.441.0",
+    "next-themes": "^0.3.0",
     "node-fetch": "^3.3.2",
     "postcss": "^8.4.45",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-github-calendar": "^4.1.5",
+    "react-icon-cloud": "^4.1.4",
     "react-router-dom": "^6.23.1",
     "react-scroll": "^1.9.0",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.11",
+    "tailwindcss-animate": "^1.0.7",
     "tsparticles": "^3.4.0"
   }
 }
