--- a/src/components/blog/projects.json
+++ b/src/components/blog/projects.json
@@ -64,5 +64,17 @@
       { "name": "Html", "icon": "Html" },
       { "name": "Css", "icon": "Css" }
     ]
+  },
+  {
+    "title": "Bingo",
+    "description": "Un proyecto pequeño con next.js, donde se puede jugar al bingo. Fue un proyecto de práctica para aprender los conceptos básicos de Next.js.",
+    "github": "https://github.com/heysonbr/bingo",
+    "demo": "https://bingo-seven-liard.vercel.app/",
+    "image": "/bingo.png",
+    "tags": [
+      { "name": "NextJS", "icon": "NextJS" },
+      { "name": "React", "icon": "React" },
+      { "name": "Tailwind", "icon": "Tailwind" }
+    ]
   }
 ]
